[gd_scene load_steps=6 format=4 uid="uid://c7ue81yr5jmvn"]

[ext_resource type="Theme" uid="uid://b87w0gxls3wqd" path="res://Resources/Themes/Button.tres" id="1_etxde"]
[ext_resource type="Script" uid="uid://da3r5d12l2rqu" path="res://Scenes/Main Menu/Main.gd" id="1_vxl72"]
[ext_resource type="PackedScene" uid="uid://ccf0404g167ke" path="res://Objects/Map/Map.tscn" id="2_tj3qj"]
[ext_resource type="Texture2D" uid="uid://du53kaopwlpx5" path="res://Textures/UI/MM_Coin_50x80.png" id="3_hobcc"]

[sub_resource type="LabelSettings" id="LabelSettings_81asv"]
font_size = 42

[node name="Main" type="Node2D"]
script = ExtResource("1_vxl72")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Map" parent="CanvasLayer" instance=ExtResource("2_tj3qj")]
tile_map_data = PackedByteArray("AAAAAAAAAQAAAAAAAAAAAAEAAQAAAAAAAAAAAAIAAQAAAAAAAAAAAAMAAQAAAAAAAAAAAAQAAQAAAAAAAAAAAAUAAQAAAAAAAAAAAAYAAQAAAAAAAAAAAAcAAQAAAAAAAAAAAAgAAQAAAAAAAAAAAAkAAQAAAAAAAAAAAAoAAQAAAAAAAAABAAAAAQAAAAAAAAABAAEAAQAAAAAAAAABAAIAAQAAAAAAAAABAAMAAQAAAAAAAAABAAQAAQAAAAAAAAABAAUAAQAAAAAAAAABAAYAAQAAAAAAAAABAAcAAQAAAAAAAAABAAgAAQAAAAAAAAABAAkAAQAAAAAAAAABAAoAAQAAAAAAAAACAAAAAQAAAAAAAAACAAEAAQAAAAAAAAACAAIAAQAAAAAAAAACAAMAAQAAAAAAAAACAAQAAQAAAAAAAAACAAUAAQAAAAAAAAACAAYAAQAAAAAAAAACAAcAAQAAAAAAAAACAAgAAQAAAAAAAAACAAkAAQAAAAAAAAACAAoAAQAAAAAAAAADAAAAAQAAAAAAAAADAAEAAQAAAAAAAAADAAIAAQAAAAAAAAADAAMAAQAAAAAAAAADAAQAAQAAAAAAAAADAAUAAQAAAAAAAAADAAYAAQAAAAAAAAADAAcAAQAAAAAAAAADAAgAAQAAAAAAAAADAAkAAQAAAAAAAAADAAoAAQAAAAAAAAAEAAAAAQAAAAAAAAAEAAEAAQAAAAAAAAAEAAIAAQAAAAAAAAAEAAMAAQAAAAAAAAAEAAQAAQAAAAAAAAAEAAUAAQAAAAAAAAAEAAYAAQAAAAAAAAAEAAcAAQAAAAAAAAAEAAgAAQAAAAAAAAAEAAkAAQAAAAAAAAAEAAoAAQAAAAAAAAAFAAAAAQAAAAAAAAAFAAEAAQAAAAAAAAAFAAIAAQAAAAAAAAAFAAMAAQAAAAAAAAAFAAQAAQAAAAAAAAAFAAUAAQAAAAAAAAAFAAYAAQAAAAAAAAAFAAcAAQAAAAAAAAAFAAgAAQAAAAAAAAAFAAkAAQAAAAAAAAAFAAoAAQAAAAAAAAAGAAAAAQAAAAAAAAAGAAEAAQAAAAAAAAAGAAIAAQAAAAAAAAAGAAMAAQAAAAAAAAAGAAQAAQAAAAAAAAAGAAUAAQAAAAAAAAAGAAYAAQAAAAAAAAAGAAcAAQAAAAAAAAAGAAgAAQAAAAAAAAAGAAkAAQAAAAAAAAAGAAoAAQAAAAAAAAAHAAAAAQAAAAAAAAAHAAEAAQAAAAAAAAAHAAIAAQAAAAAAAAAHAAMAAQAAAAAAAAAHAAQAAQAAAAAAAAAHAAUAAQAAAAAAAAAHAAYAAQAAAAAAAAAHAAcAAQAAAAAAAAAHAAgAAQAAAAAAAAAHAAkAAQAAAAAAAAAHAAoAAQAAAAAAAAAIAAAAAQAAAAAAAAAIAAEAAQAAAAAAAAAIAAIAAQAAAAAAAAAIAAMAAQAAAAAAAAAIAAQAAQAAAAAAAAAIAAUAAQAAAAAAAAAIAAYAAQAAAAAAAAAIAAcAAQAAAAAAAAAIAAgAAQAAAAAAAAAIAAkAAQAAAAAAAAAIAAoAAQAAAAAAAAAJAAAAAQAAAAAAAAAJAAEAAQAAAAAAAAAJAAIAAQAAAAAAAAAJAAMAAQAAAAAAAAAJAAQAAQAAAAAAAAAJAAUAAQAAAAAAAAAJAAYAAQAAAAAAAAAJAAcAAQAAAAAAAAAJAAgAAQAAAAAAAAAJAAkAAQAAAAAAAAAJAAoAAQAAAAAAAAAKAAAAAQAAAAAAAAAKAAEAAQAAAAAAAAAKAAIAAQAAAAAAAAAKAAMAAQAAAAAAAAAKAAQAAQAAAAAAAAAKAAUAAQAAAAAAAAAKAAYAAQAAAAAAAAAKAAcAAQAAAAAAAAAKAAgAAQAAAAAAAAAKAAkAAQAAAAAAAAAKAAoAAQAAAAAAAAALAAAAAQAAAAAAAAALAAEAAQAAAAAAAAALAAIAAQAAAAAAAAALAAMAAQAAAAAAAAALAAQAAQAAAAAAAAALAAUAAQAAAAAAAAALAAYAAQAAAAAAAAALAAcAAQAAAAAAAAALAAgAAQAAAAAAAAALAAkAAQAAAAAAAAALAAoAAQAAAAAAAAAMAAAAAQAAAAAAAAAMAAEAAQAAAAAAAAAMAAIAAQAAAAAAAAAMAAMAAQAAAAAAAAAMAAQAAQAAAAAAAAAMAAUAAQAAAAAAAAAMAAYAAQAAAAAAAAAMAAcAAQAAAAAAAAAMAAgAAQAAAAAAAAAMAAkAAQAAAAAAAAAMAAoAAQAAAAAAAAANAAAAAQAAAAAAAAANAAEAAQAAAAAAAAANAAIAAQAAAAAAAAANAAMAAQAAAAAAAAANAAQAAQAAAAAAAAANAAUAAQAAAAAAAAANAAYAAQAAAAAAAAANAAcAAQAAAAAAAAANAAgAAQAAAAAAAAANAAkAAQAAAAAAAAANAAoAAQAAAAAAAAAOAAAAAQAAAAAAAAAOAAEAAQAAAAAAAAAOAAIAAQAAAAAAAAAOAAMAAQAAAAAAAAAOAAQAAQAAAAAAAAAOAAUAAQAAAAAAAAAOAAYAAQAAAAAAAAAOAAcAAQAAAAAAAAAOAAgAAQAAAAAAAAAOAAkAAQAAAAAAAAAOAAoAAQAAAAAAAAAPAAAAAQAAAAAAAAAPAAEAAQAAAAAAAAAPAAIAAQAAAAAAAAAPAAMAAQAAAAAAAAAPAAQAAQAAAAAAAAAPAAUAAQAAAAAAAAAPAAYAAQAAAAAAAAAPAAcAAQAAAAAAAAAPAAgAAQAAAAAAAAAPAAkAAQAAAAAAAAAPAAoAAQAAAAAAAAAQAAAAAQAAAAAAAAAQAAEAAQAAAAAAAAAQAAIAAQAAAAAAAAAQAAMAAQAAAAAAAAAQAAQAAQAAAAAAAAAQAAUAAQAAAAAAAAAQAAYAAQAAAAAAAAAQAAcAAQAAAAAAAAAQAAgAAQAAAAAAAAAQAAkAAQAAAAAAAAAQAAoAAQAAAAAAAAARAAAAAQAAAAAAAAARAAEAAQAAAAAAAAARAAIAAQAAAAAAAAARAAMAAQAAAAAAAAARAAQAAQAAAAAAAAARAAUAAQAAAAAAAAARAAYAAQAAAAAAAAARAAcAAQAAAAAAAAARAAgAAQAAAAAAAAARAAkAAQAAAAAAAAARAAoAAQAAAAAAAAA=")

[node name="MMCoin" type="HBoxContainer" parent="CanvasLayer"]
layout_direction = 2
offset_left = 20.0
offset_top = 20.0
offset_right = 67.0
offset_bottom = 65.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MMCoinDisplay" type="TextureRect" parent="CanvasLayer/MMCoin"]
layout_mode = 2
texture = ExtResource("3_hobcc")

[node name="MMCoinText" type="Label" parent="CanvasLayer/MMCoin"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "0"
label_settings = SubResource("LabelSettings_81asv")

[node name="Game" type="VBoxContainer" parent="CanvasLayer" groups=["UI"]]
layout_direction = 2
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -100.0
offset_right = 290.0
offset_bottom = 100.0
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Levels" type="Button" parent="CanvasLayer/Game"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("1_etxde")
text = "Levels"

[node name="Collection" type="Button" parent="CanvasLayer/Game"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("1_etxde")
text = "Collection
"

[node name="Exit" type="Button" parent="CanvasLayer/Game"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("1_etxde")
text = "Exit
"

[node name="Language" type="VBoxContainer" parent="CanvasLayer" groups=["UI"]]
layout_direction = 2
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -100.0
offset_bottom = 100.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="English" type="Button" parent="CanvasLayer/Language"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("1_etxde")
text = "English"

[node name="Farsi" type="Button" parent="CanvasLayer/Language"]
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("1_etxde")
text = "Farsi
"

[node name="Save" type="HBoxContainer" parent="CanvasLayer" groups=["UI"]]
layout_direction = 2
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -157.0
offset_right = 157.0
offset_bottom = 96.0
grow_horizontal = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 16

[node name="Save" type="Button" parent="CanvasLayer/Save"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("1_etxde")
text = "Save"

[node name="Load" type="Button" parent="CanvasLayer/Save"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("1_etxde")
text = "Load
"

[node name="Settings" type="VBoxContainer" parent="CanvasLayer" groups=["UI"]]
visible = false
layout_direction = 2
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -256.0
offset_bottom = 96.0
grow_horizontal = 0

[node name="Settings" type="Button" parent="CanvasLayer/Settings"]
layout_mode = 2
theme = ExtResource("1_etxde")
text = "Settings"

[connection signal="pressed" from="CanvasLayer/Game/Levels" to="." method="_on_levels_pressed"]
[connection signal="pressed" from="CanvasLayer/Game/Collection" to="." method="_on_collection_pressed"]
[connection signal="pressed" from="CanvasLayer/Game/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="CanvasLayer/Language/English" to="." method="_on_en_pressed"]
[connection signal="pressed" from="CanvasLayer/Language/Farsi" to="." method="_on_fa_pressed"]
[connection signal="pressed" from="CanvasLayer/Save/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="CanvasLayer/Save/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="CanvasLayer/Settings/Settings" to="." method="_on_settings_pressed"]
